1/16/12 remove strings that are specific to DilutionsApplication from strings file, so they aren't visible to the MolarityApplication translators
1/16/12 use lowercase "m" in "moles"
1/16/12 add min/max color range for solutes (ala beers-law-lab)
1/12/12 delete strings related to Beer's Law tab, since that tab became its own sim project
1/12/12 add Molarity sims flavor
1/12/12 ***** decision made to publish the first tab (Molarity) as "Molarity" sim
1/12/12 names (no formulae) for solutes in combo box
1/12/12 capitalize solute names
12/6/11 #3175, add sim-sharing args to usages of SliderThumbDragHandler
11/3/11 delete empty modules
# 0.00.13 (58298) Nov 2, 2011
11/2/11 Dilution: display "Solution" on right-most beaker when V2-V1=0
11/2/11 remove general beaker label updater from BeakerNode, since requirements are different for every beaker
11/2/11 try red solute in Dilution tab
11/2/11 change request: revert color change to "=" in Dilution
# 0.00.12 (58273) Nov 1, 2011
11/1/11 version to address fixes and change requests
11/01/11 fix problem with water volume in Dilution tab after Reset All
11/01/11 fix drag handler for slider thumbs so they don't jump when initially dragged
11/01/11 change request: used yellow for "=" in Dilutions
11/01/11 change request: when a beaker's volume goes to zero, show no label on the beaker
11/01/11 doc
11/01/11 pause the clock in the first 2 tabs, since there's nothing dynamic here
# 0.00.11 (58264) Nov 1, 2011
11/1/11 version with first functionally-complete Diluton tab
11/01/11 add a subtle background to sliders, so they look more like sliders
11/01/11 repackage
11/01/11 Dilution: clean up canvas constructor, address open issues
11/01/11 Molarity: clean up canvas constructor, address open issues
11/01/11 Dilution: if a beaker's concentration is zero, label it as H2O
11/01/11 Dilution: add gradient to M1 slider
11/01/11 common: remove unnecessary subclassing of DilutionsSliderNode