@@ -11,6 +11,7 @@ import edu.colorado.phet.common.phetcommon.util.RichSimpleObserver;
 import edu.colorado.phet.dilutions.DilutionsResources.Strings;
 import edu.colorado.phet.dilutions.common.model.Solute;
 import edu.colorado.phet.dilutions.common.model.Solution;
+import edu.colorado.phet.dilutions.common.model.Solvent.Water;
 
 /**
  * Model for the "Dilution" module.
@@ -40,9 +41,9 @@ public class DilutionModel implements Resettable {
     public DilutionModel() {
 
         this.solute = new Solute( Strings.SOLUTE, "?", CONCENTRATION_RANGE.getMax(), new ColorRange( new Color( 255, 225, 225 ), Color.RED ), 5, 200 ); // hypothetical solute with unknown formula
-        this.solution = new Solution( solute, SOLUTE_AMOUNT_RANGE.getDefault(), SOLUTION_VOLUME_RANGE.getDefault() );
-        this.dilution = new Solution( solute, SOLUTE_AMOUNT_RANGE.getDefault(), DILUTION_VOLUME_RANGE.getDefault() );
-        this.water = new Solution( solute, 0, dilution.volume.get() - solution.volume.get() );
+        this.solution = new Solution( new Water(), solute, SOLUTE_AMOUNT_RANGE.getDefault(), SOLUTION_VOLUME_RANGE.getDefault() );
+        this.dilution = new Solution( new Water(), solute, SOLUTE_AMOUNT_RANGE.getDefault(), DILUTION_VOLUME_RANGE.getDefault() );
+        this.water = new Solution( new Water(), solute, 0, dilution.volume.get() - solution.volume.get() );
 
         double initialConcentration = ( solution.volume.get() == 0 ) ? 0 : solution.soluteAmount.get() / solution.volume.get();
         this.solutionConcentration = new Property<Double>( initialConcentration );
